# TumorTwin

./: .gitignore  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint-and-test.yml
docs/: LICENSE.md  contributing.md  index.md  installation.md  theory.md  tutorials.md
docs/api/models/: base.md  rxdx.md
docs/api/optimizers/: lm.md
docs/api/postprocessing/: qoi.md  tcc.md
docs/api/preprocessing/: boundary_conditions.md  cellularity.md  crop.md
docs/api/solvers/: base.md  torchdiffeq.md
docs/api/treatments/: ct.md  rt.md
docs/api/types/: imaging.md  treatments.md
docs/developers/: developer.md
docs/stylesheets/: extra.css
docs/theory/: 00_overview.md  01_patient_data.md  02_model.md  03_solver.md  04_gradients.md  05_calibration.md  theory.md
input_files/HGG_demo_001/: HGG_demo_001.json
input_files/HGG_demo_002/: HGG_demo_002.json
input_files/HGG_demo_003/: HGG_demo_003.json
input_files/HGG_demo_004/: HGG_demo_004.json
input_files/HGG_demo_005/: HGG_demo_005.json
input_files/TNBC_demo_001/: TNBC_demo_001.json
input_files/TNBC_demo_002/: TNBC_demo_002.json
input_files/TNBC_demo_003/: TNBC_demo_003.json
input_files/TNBC_demo_004/: TNBC_demo_004.json
input_files/TNBC_demo_005/: TNBC_demo_005.json
tests/: conftest.py  test_bound_condition_maker.py  test_cellularity_estimation.py  test_crop.py  test_qoi.py  test_visualizations.ipynb
tests/models/: test_chemotherapy.py  test_diffusion.py  test_radiotherapy.py  test_reaction.py
tumortwin/models/: __init__.py  base.py  reaction_diffusion_3d.py  reaction_diffusion_3d_nn.py
tumortwin/optimizers/: __init__.py  lm_optimizer.py
tumortwin/postprocessing/: __init__.py  calibration_summary.py  imaging_summary.py  patient_timeline.py  prediction_summary.py  qoi.py  total_cell_count.py
tumortwin/preprocessing/: __init__.py  bound_condition_maker.py  cellularity.py  crop.py
tumortwin/solvers/: __init__.py  base.py  torch_solver.py
tumortwin/treatments/: __init__.py  chemotherapy.py  radiotherapy.py
tumortwin/types/: __init__.py  base.py  hgg_data.py  imaging.py  tnbc_data.py  treatment.py  utility.py
tumortwin/utils/: __init__.py  datetime_utils.py  image_utils.py
tutorials/: Cropping_Demo.ipynb  HGG_Demo.ipynb  HGG_Demo_nn.ipynb  HGG_Gradients.ipynb  TNBC_Demo.ipynb
(+1 files in other folders)
