[project]
name = "tumortwin"
dynamic = ["version"]

requires-python = ">=3.9"

dependencies = [
    "numpy==1.23.5",
    "scipy >= 1.13",
    "scikit-learn >= 1.5",
    "matplotlib >= 3.9",
    "torch",
    "torchdiffeq",
    "mypy",
    "flake8",
    "isort",
    "black[jupyter]",
    "ipykernel",
    "ipywidgets",
    "nbformat",
    "rich",
    "nibabel",
    "pytest",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "types-tqdm"
]

[tool.setuptools]
packages.find.include = ["tumortwin*"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true