[project]
name = "tumortwin"
dynamic = ["version"]
requires-python = ">=3.9, <3.12"

dependencies = [
    "numpy >= 1.24, <1.26",
    "scipy >= 1.13",
    "matplotlib >= 3.9",
    "torch",
    "torchdiffeq",
    "ipykernel",
    "ipywidgets",
    "nbformat",
    "rich",
    "nibabel",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "types-tqdm"
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings",
    "mkdocstrings-python"
]
dev = [
    "pytest",
    "mypy",
    "flake8",
    "black[jupyter]",
    "isort",
]

[tool.setuptools]
packages.find.include = ["tumortwin*"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
